Actually Fixed CSS Sizing using JS (Page Width + Scrollbar Width)

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --page-width: calc(100vw);
     --content-width: calc(var(--page-width) - 16px);
+    --scrollbar-width: 16px;
     --page-bg: #a082ff;
     --setup-bg: #d7c8ff;
     --setup-text: #0a001e;
@@ -12,12 +13,13 @@ html {
 }
 body {
     background-color: var(--page-bg);
+    /* position: fixed; */
 }
 
 .setup-form {
     display: flex;
     margin: auto;
-    width: var(--page-width);
+    width: calc(var(--content-width) - var(--scrollbar-width));
     align-items: center;
     line-height: 40px;
 
@@ -25,7 +27,7 @@ body {
         --padding: 20px;
         display: inline-flex;
         height: 30px;
-        width: calc(((var(--page-width) / 2) - 10px) - (var(--padding) * 2));
+        width: calc(((var(--content-width) / 2) - 10px) - (var(--padding) * 2));
         align-items: center;
         justify-content: space-evenly;
         background-color: var(--setup-bg);
@@ -91,7 +93,7 @@ body {
     .select-container, .size-container {
         display: flex !important;
         margin: auto;
-        width: calc(var(--content-width) - (var(--padding) * 2)) !important;
+        width: calc((var(--content-width) - var(--scrollbar-width)) - (var(--padding) * 2)) !important;
     }
 }
 @media (max-width: 600px) {
